# gateway

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  PLAN.md  PROGRESS.md  README.md  build.rs  워크플로우 다이어그램.md
.claude/legacy/: insight-20260224.md
.claude/projects/: qkvg-gateway-mindmap-v1.md
.github/: CONTRIBUTING.md
.sqlx/: query-14e8b761c8c8d23a1d2c10ab037db04f21cd85f0a9eafdff9e18cce7a14bdd98.json  query-314b4fdda084c6db96da02e0f50759b916c6eff8c451def8decaae961eb5fe16.json  query-383ac954e985dbbf749446d0a94c6a3dd22113224c8ff04844d795e6dfcd797f.json  query-43d3c995bb77d4607d3ef7d6fc3e85abf53670f49634a2b8f9f0b3a43089be8a.json  query-6714a7a1ea3e10a4c9c49aefd016b7b7b84686e1cb13f133a3ccd2c8357ec0bf.json  query-6c139b8eca95d7ae0ff3f597b36fa5d1af5ff8dd0035ce7ab3cc2dd914634a78.json  query-7e23ad5c1057b6bce30cd83cdcd37dfeea6f0da9e3d248a00e593d02eb10fab8.json  query-7e36b4b415c962d642ce38bfe0163bcab7d00d3fc0d3831e15a3717cfd50ca9d.json  query-8ca8e09c0c2a9097869ffe5bee50a2b59d56cec308676ff6e2de6bb3d6f37fba.json  query-a0bea2736c965ffcc81cc20e1fcac5c07a22ecc73d8e26edc953bcdfa325b719.json  query-aa0bbe69af5e1d765c61a45b23f3b945a146e53d2f99afe57482312a963aafb8.json  query-ab4b25eef38ef30e3c83ee26a3c067d309f83eadfd61ef34ffd0af944fca1751.json  query-d88d1b0e2a0d752bf53368561f5c1b3985421ddf382a4bf769cad952abab1bcd.json  query-ffc843086b5dd59e4391f7c7d501d0040d8a9506b19ad2dadda22e4168d061ec.json
contracts/: HelmEscrow.sol  QkvgEscrow.sol
crates/helm-agent/: Cargo.toml
crates/helm-agent/src/: agent.rs  behavior.rs  capability.rs  lib.rs  lifecycle.rs  message.rs  mining.rs  plugin.rs  registry.rs  scheduler.rs  womb.rs  womb_plugin.rs
crates/helm-agent/src/socratic/: claw.rs  gap_repo.rs  mod.rs
crates/helm-core/: Cargo.toml
crates/helm-core/src/: config.rs  event_loop.rs  lib.rs  plugin.rs  runtime.rs
crates/helm-engine/: Cargo.toml
crates/helm-engine/src/: lib.rs
crates/helm-engine/src/api/: billing.rs  core_api.rs  core_api_plugin.rs  edge.rs  mod.rs
crates/helm-engine/src/grg/: golay.rs  golomb.rs  mod.rs  pipeline.rs  redstuff.rs
crates/helm-engine/src/qkvg/: attention.rs  block_pool.rs  block_table.rs  cache_block.rs  mod.rs
crates/helm-engine/src/shard/: exchange.rs  mod.rs
crates/helm-governance/: Cargo.toml
crates/helm-governance/src/: lib.rs  plugin.rs  proposal.rs  voting.rs
crates/helm-identity/: Cargo.toml
crates/helm-identity/src/: bond.rs  did.rs  lib.rs  plugin.rs  reputation.rs  spanner.rs
crates/helm-net/: Cargo.toml
crates/helm-net/src/: discovery.rs  lib.rs  protocol.rs  transport.rs
crates/helm-node/: Cargo.toml
crates/helm-node/migrations/: 001_initial.sql
crates/helm-node/src/: main.rs
crates/helm-node/src/cli/: banner.rs  commands.rs  gateway_commands.rs  github_oauth.rs  init.rs  mod.rs  moderator.rs
crates/helm-node/src/gateway/: auth.rs  db.rs  mod.rs  pricing.rs  server.rs  state.rs  tests.rs  x402.rs
crates/helm-node/src/gateway/handlers/: boot.rs  cortex.rs  earnings.rs  exchange.rs  fico.rs  helm_score.rs  marketplace.rs  memory.rs  mod.rs  packages.rs  pool.rs  subscriptions.rs  synco.rs  topup.rs
crates/helm-node/tests/: integration.rs
crates/helm-store/: Cargo.toml
crates/helm-store/src/: cache.rs  kv.rs  lib.rs  plugin.rs
crates/helm-store/src/backend/: memory.rs  mod.rs  sled_backend.rs
crates/helm-store/src/crdt/: gcounter.rs  lww.rs  merkle_crdt.rs  mod.rs  orset.rs
crates/helm-store/src/merkle/: dag.rs
crates/helm-store/src/sync/: protocol.rs
crates/helm-token/: Cargo.toml
crates/helm-token/src/: cabinet.rs  genesis.rs  launchpad.rs  lib.rs  plugin.rs  pricing.rs  staking.rs  token.rs  treasury.rs  wallet.rs  x402.rs
deploy/: bootstrap-gcp.sh  docker-compose.yml
deploy/tor-config/: torrc
docs/: QUICKSTART.md
docs/b2b/: email_drafts_depin_v2.md
migrations/: 001_init.sql  002_marketplace.sql  003_api_registry.sql  004_funding_multi_token.sql  004_funding_multitoken.sql  005_funding_vendor_fields.sql
npm/: install.js  package.json
npm-gateway/: install.js  package.json
scripts/: anonymity-check.sh  setup-anonymity.sh
sdk/python/: pyproject.toml
sdk/python/helm_sdk/: __init__.py  client.py  types.py
src/: dashboard.rs  error.rs  gandiva_quic.rs  krishna_l2.rs  lattice_l2.rs  main.rs  metrics.rs  node.rs  semantic_l2.rs
src/api_registry/: mod.rs
src/auth/: did_exchange.rs  mod.rs  types.rs
src/billing/: mod.rs
src/broker/: api_broker.rs  mod.rs  semantic_cache.rs
src/filter/: g_metric.rs  mod.rs  oracle.rs  proof_of_novelty.rs  qkvg.rs  socratic_mla.rs  terminal_sanitizer.rs
src/grg/: mod.rs
src/integrations/: adversarial_sim.rs  mod.rs  oracle_polymarket_sim.rs  polymarket.rs  polymarket_sim.rs
src/market/: memory_market.rs  mod.rs
src/marketplace/: elite_gate.rs  escrow_link.rs  funding.rs  mod.rs  types.rs
src/mcp/: mod.rs  server.rs
src/p2p/: kaleidoscope.rs  mod.rs  sovereign_router.rs  transport.rs
src/payments/: mod.rs  multi_token.rs  x402.rs
src/pricing/: mod.rs  novelty.rs
src/synco/: mod.rs
static/: index.html  launch.html
