[workspace]
members = ["crates/helm-core", "crates/helm-net", "crates/helm-node", "crates/helm-engine", "crates/helm-store", "crates/helm-agent", "crates/helm-token"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "kad",
    "noise",
    "tcp",
    "yamux",
    "identify",
    "mdns",
    "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
ed25519-dalek = "2"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async
futures = "0.3"

# Caching
moka = { version = "0.12", features = ["sync", "future"] }

[profile.release]
opt-level = 3
lto = true
strip = true
