[package]
name = "qkvg-gateway"
version = "0.1.0"
edition = "2021"
description = "Helm-sense API Gateway — AI Agent API Brokerage with G-Metric Filtering"

[workspace]

[[bin]]
name = "qkvg-gateway"
path = "src/main.rs"

[dependencies]
# === ASYNC RUNTIME ===
tokio = { version = "1", features = ["full"] }

# === WEB FRAMEWORK ===
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2"

# === SERIALIZATION ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === P2P NETWORKING (Day 0 - C-4) ===
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "tokio",
    "macros",
]}

# === CRYPTO (Day 0 - H-6/H-7) ===
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# === JWT (DID Session Tokens) ===
jsonwebtoken = "9"

# === HASHING (SyncO XXHash3 재활용) ===
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# === REGEX (Layer 1 Heuristics) ===
regex = "1"
lazy_static = "1.4"

# === CACHE ===
redis = { version = "0.23", features = ["tokio-comp"] }

# === DATABASE ===
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# === PAYMENTS (Day 1 - H-8) ===
# Base chain 연동 (ethers 대신 경량 alloy 사용)
# ethers = { version = "2" }  # TODO: 배포 시 활성화

# === EMBEDDING (Day 2 - Layer 2/3) ===
fastembed = { version = "3", optional = true }  # BGE-small-en-v1.5 ONNX semantic embedding

# === UTILITIES ===
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"

# === HTTP CLIENT (외부 API 호출) ===
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[features]
default = []
fastembed = ["dep:fastembed"]  # enable semantic embedding
