[package]
name = "helm-gateway"
version = "0.3.0"
edition = "2021"
description = "Helm-sense API Gateway — AI Agent Knowledge Sovereignty"

[workspace]

# 1. HOST (A+B): 서버 + 관리자 TUI 대시보드
[[bin]]
name = "helm-gateway"
path = "src/main.rs"

# 2. AGENT (B): 에이전트/일반 사용자용 TUI CLI 클라이언트
[[bin]]
name = "helm-cli"
path = "src/bin/helm-cli/main.rs"

[dependencies]
# === RUNTIME & WEB FRAMEWORK (Meta Standard) ===
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout"] }
actix-web = "4"

# === TUI & CLI ===
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
clap = { version = "4.5", features = ["derive", "env"] }
tui-input = "0.8"

# === NETWORK & SECURITY ===
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
rustls = "0.23"

# === gRPC & PROTOBUF (Internal Core Comm) ===
tonic = "0.11"
prost = "0.12"

# === SERIALIZATION ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === P2P NETWORKING ===
libp2p = { version = "0.53", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "tokio",
    "macros",
]}

# === QUIC & HTTP/3 ===
quinn = "0.11"

# === CRYPTO ===
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rcgen = "0.13"

# === JWT (DID Session Tokens) ===
jsonwebtoken = "9"

# === HASHING ===
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# === REGEX ===
regex = "1"
lazy_static = "1.4"

# === CACHE ===
redis = { version = "0.23", features = ["tokio-comp"] }

# === DATABASE ===
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# === UTILITIES ===
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.11"
tokio-test = "0.4"
mockito = "1"

[profile.release]
opt-level = "z"     # Optimize for size (Meta Standard)
lto = true          # Link Time Optimization
codegen-units = 1   # Maximize optimization quality
panic = "abort"     # Immediate termination on panic
strip = true        # Remove debug symbols
