[package]
name = "helm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core runtime and plugin system for Helm Protocol"

[dependencies]
helm-net = { path = "../helm-net" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
