[package]
name = "helm-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P networking layer for Helm Protocol"

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
