[package]
name = "helm-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Helm Protocol node binary"

[[bin]]
name = "helm"
path = "src/main.rs"

[dependencies]
helm-core = { path = "../helm-core" }
helm-net = { path = "../helm-net" }
helm-engine = { path = "../helm-engine" }
helm-store = { path = "../helm-store" }
helm-agent = { path = "../helm-agent" }
helm-token = { path = "../helm-token" }
helm-identity = { path = "../helm-identity" }
helm-governance = { path = "../helm-governance" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
