[package]
name = "helm-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Helm Protocol node binary"

[[bin]]
name = "helm"
path = "src/main.rs"

[dependencies]
helm-core = { path = "../helm-core" }
helm-net = { path = "../helm-net" }
helm-engine = { path = "../helm-engine" }
helm-store = { path = "../helm-store" }
helm-agent = { path = "../helm-agent" }
helm-token = { path = "../helm-token" }
helm-identity = { path = "../helm-identity" }
helm-governance = { path = "../helm-governance" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
sha3 = "0.10"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
# HTTP Gateway
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7" }

[dev-dependencies]
serde_json = { workspace = true }
