[package]
name = "helm-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Distributed KV store with CRDT support, Merkle DAG, and sync protocol for Helm Protocol"

[dependencies]
helm-core = { path = "../helm-core" }
helm-net = { path = "../helm-net" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
sled = "0.34"
