[package]
name = "helm-token"
description = "Helm Protocol — Token Economics, Staking, Treasury & Governance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
helm-core = { path = "../helm-core" }
helm-net = { path = "../helm-net" }

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
async-trait = "0.1"
tokio.workspace = true
