[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synco"
version = "0.3.0"
description = "Python SDK for Helm Protocol — AI Agent P2P Gateway with Proof of Novelty"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Helm Protocol", email = "jay@helm-protocol.org"}]
keywords = ["ai", "agent", "protocol", "helm", "depin", "oracle", "g-score", "proof-of-novelty"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
identity = ["pynacl>=1.5"]
all = ["pynacl>=1.5"]

[project.urls]
Homepage = "https://github.com/Helm-Protocol/gateway"
Documentation = "https://github.com/Helm-Protocol/gateway/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/Helm-Protocol/gateway"
Issues = "https://github.com/Helm-Protocol/gateway/issues"

[tool.hatch.build.targets.wheel]
packages = ["helm_sdk"]
